--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    h1= title
+    #chart_div
+    #week_chart_div 
+    #month_chart_div
