--- a/views/pdlayout.pug
+++ b/views/pdlayout.pug
@@ -16,5 +16,5 @@ html
   body
     block content
     br
-    a(href=policyDetails.name + "/data") Know Your Data!
+    a(href=policyDetails.name + "/data") See your Data!
 
